@@ -404,6 +404,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Invalidate actions_panel cache for Meeting and MeetingItem if MeetingConfig is modified.  Indeed it can add/remove WF transitions
   or enable/disable delete icon when item contains advices for example.  This is done at the ram.cache invalidation key level because
   call to cleanRamCache in MeetingConfig.at_post_edit_script is not enough when using several ZEO instances
+- Make sure it is not possible to paste config items (ItemTemplate, RecurringItem) from a MeetingConfig to another as the copy/paste
+  buttons are enabled in the item templates management configuration
 
 3.3 (2015-02-27)
 ----------------
